--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://imgs.search.brave.com/9XVdH-eA3hMPuVGd8H3w-wIlseFduTJMO3Y4BPUmb-g/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9pbWFn/ZS5waXRjaGJvb2su/Y29tL2xUZzV0MkxB/SmFWd05QenB2ZHhR/TzZNbENoMDE3MjQ3/NDcwMDYyMDFfMjAw/eDIwMA" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>MetaMan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter&display=swap"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600;700&family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet">
 
     </head>
 
